--- a/html.html
+++ b/html.html
@@ -76,15 +76,12 @@
 
             <p>
 
-                A Fullstack Developer based in Delhi, India. Currently an Intern at Groww, India. I'm pursuing BTech in
-                Computer
-                Science from VIT-Vellore.
+                A Fullstack Developer based in Maharashtra, India. Currently an Intern at a startup, India.
 
 
 
                 I have hands on experience with various languages and frameworks. I've worked with Flutter and Go. I've
-                made
-                projects with React, Node. Delved a bit into native android dev with Kotlin and Jetpack Compose.
+                made projects with React, Node. Delved a bit into native android dev with Kotlin and Jetpack Compose.
 
 
 
