added media files

--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@
         <img src="https://source.unsplash.com/200x110/?nature,water" alt="remote image" width="233" height="100"
             id="image_to_hide">
 
+        <!-- To add an VIDEO -->
+        <video width="400px" controls>
+            <source src="./assets/butterfly.mp4" type="video/mp4"/>
+        </video>
+        
+        <!-- To add an AUDIO -->
+        <audio controls>
+            <source src="assets/tyd.mp3" type="audio/mp3" />
+        </audio>
 
+        <!-- To play Youtube Videos iframe tag -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/EFHeeRIDAsg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
 
         <!-- Lists -->
         <div class="project">
