--- a/index.html
+++ b/index.html
@@ -76,12 +76,26 @@
 
             <p>
 
-                A Fullstack Developer based in Maharashtra, India. Currently an Intern at a startup, India.
+                A Fullstack Developer based in Maharashtra, India. 
+              
 
+Talking about myself , I've Been a Science Enthusiast from since my Childhood.
 
+I've received various Certificates from my school and interschool competitions during my Schoolings.
 
-                I have hands on experience with various languages and frameworks. I've worked with Flutter and Go. I've
-                made projects with React, Node. Delved a bit into native android dev with Kotlin and Jetpack Compose.
+I've always maintained high academic interests , and with all my sole Enthusiasm participated in almost all my School activities, 
+
+My Simple Alumnis includes , 
+A Indian Government Certified TRIPLE C course for computer Applications, including all microsoft Essentials like Excels, powerpoints , words , Etc.
+
+I've also bagged 1st position in Interschool  E-MOVIE making Competition held in my City.
+
+I've participated in Interschool Maths Exhibitions, held by MCE society's Mathematics Academy, multiple times and have Bagged 1st position in the Same twice and 3rd Position once.
+
+My certificates of excellence includes courses like Photoshop, Corel Draw, Tux , Scribes, etc
+
+                I have hands on experience with various languages and frameworks. I've
+                made projects with React, Node.
 
 
 
