changed about section:

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- ------------------------------------------------------------------------------- -->
 
-    <title>Fyka's Portfolio</title>
+    <title>Portfolio</title>
 
     <!-- This is how you include external css -->
     <link rel="stylesheet" href="css.css">
@@ -55,10 +55,10 @@
 
         <nav class="navbar">
 
-            <h1>Fyka's Portfolio</h1>
+            <h1>Portfolio</h1>
             <ul>
                 <div class="search">
-                    <input type="text" name="search" id="search" placeholder="Search my Portfolio">
+                    <input type="text" name="search" id="search" placeholder="Search my Portfolio" autofocus>
                 </div>
 
                 <li><a href="#work"> Work</a></li>
@@ -112,8 +112,8 @@ My certificates of excellence includes courses like Photoshop, Corel Draw, Tux ,
         </div>
 
         <!-- To open a link in a new tab we add target -->
-        <a href="https://google.com" target="_blank">Go to Google Blank</a>
-        <a href="https://facebook.com" target="_self">Go to Facebook Self</a>
+        <a href="https://www.linkedin.com/in/faeka/" target="_blank">LinkedIn (Blank - new tab)</a>
+        <a href="https://github.com/fykaa" target="_self">GitHub (Self - same tab)</a>
 
         <!-- To add a break in line -->
         <br>
@@ -240,7 +240,8 @@ My certificates of excellence includes courses like Photoshop, Corel Draw, Tux ,
                 type="text"
                 placeholder="Enter Your Name here" 
                 autofocus
-                 id="name" name="">
+                id="name" name="">
+                
             </div>
             <br>
             <div class="box" id="email">
