--- a/index.html
+++ b/index.html
@@ -66,27 +66,46 @@
           <li><a href="#work"> Contributions</a></li>
           <li><a href="#project"> Projects</a></li>
           <li><a href="#contact"> Contact</a></li>
-          <li><a href="./pages/learnings.html"> Learnings</a></li>
+          <li>
+            <a href="./pages/learnings.html" target="_blank"> Learnings</a>
+          </li>
           <li><a href="#about"> About</a></li>
         </ul>
       </nav>
     </header>
 
     <section>
-      <div class="about" id="about">
-        <h2 class="subhead">&rAarr; About Me &lAarr;</h2>
+      <section class="about" id="about">
+        <div class="subhead">
+          <h2>About me</h2>
+        </div>
+        <div class="content">
+          <div class="contentbox w50 w75">
+            <h3>I'm a Developer.</h3>
+            <p>
+              🌀Self-taught Web Dev ⚡ Pursuing degree in Computer Science 📸
+              Photographer .
+            </p>
 
-        <p class="about-data">
-          A Fullstack Developer based in Maharashtra, India. Talking about
-          myself , I've Been a Science Enthusiast from since my Childhood.I have
-          hands on experience with various languages and frameworks. I've made
-          projects with React, Node. I love open source. I try to contribute to
-          open source projects (which I like or use) from time to time. Trying
-          to get better at contributing. I also have some interest in design. I
-          love to design UIs, social media posters for my projects on my own. In
-          fact, I designed this website too!
-        </p>
-      </div>
+            <p>
+              I love programming and making random web-based applications for
+              fun. I am a future full-stack developer, currently I'm focusing on
+              the backend.
+            </p>
+            <h3>My Interests</h3>
+            <p>
+              Apart from this, i have got a tons of interests! <br /><br />
+              >reading books 📖<br />
+              >photography; 📸<br />
+              >skecthing/painting!; 🎮<br />
+              >I love talking to new people, and making friend!! 🙋‍♂️
+            </p>
+          </div>
+          <div aling="right" class="w50">
+            <img src="./assets/girl.jpg" class="img-responsive imgIM" />
+          </div>
+        </div>
+      </section>
 
       <div class="project" id="project">
         <h3 class="subhead">&rAarr;Projects&lAarr;</h3>
