--- a/index.html
+++ b/index.html
@@ -8,44 +8,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- characters that are used will be of UTF-8 -->
     <meta charset="UTF-8" />
-
-    <!-- website to open in the highest compatibility -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- to make your website responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- To add a description, we have to write the above statement  -->
     <meta name="description" content="This is description" />
-
-    <!-- Keywords are those special words through which a user reach any website -->
     <meta name="keywords" content="html, html tutorials, web development" />
-
-    <!-- If we want our website to be indexed in Google or other search engines and bots should follow all the links present on the website, then we have to write -->
     <meta name="robots" content="INDEX, FOLLOW" />
-
-    <!-- ------------------------------------------------------------------------------- -->
-
     <title>Portfolio</title>
-
-    <!-- This is how you include external css
-    to link file in the same folder ./
-    to link file in the folder outside scope ../  -->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/favicon_io/favicon.ico"
+    />
     <link rel="stylesheet" href="./styling.css" />
-
-    <!-- This is how you include external JavaScript -->
-    <script src="javascript.js"></script>
-
-    <!-- Adding Font Family -->
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- INTERNAL CSS -->
-
-    <style></style>
+    <script src="javascript.js"></script>
   </head>
 
   <body>
