--- a/pages/learnings.html
+++ b/pages/learnings.html
@@ -88,196 +88,23 @@
         <a href="../assets/girl.jpg">Click To Download</a>
 
         <!-- Lists -->
-        <div class="project">
-
-            <h3 class="subhead">&rAarr;List of My Projects&lAarr;</h3>
-            <ul type="circle">
-                <h2>Skills in tech Stack</h3>
-                    <li>This is the first item of my unordered list</li>
-                    <li>This is the second item of my unordered list</li>
-                    <ul type="square">
-                        <li>Another one</li>
-                        <li>Another two</li>
-                        <li>Another three</li>
-                    </ul>
-            </ul>
-            <ol type="a">
-                <li>This is first item of my ordered list</li>
-                <li>This is second item of my ordered list</li>
-                <li>This is third item of my ordered list</li>
-            </ol>
-
-        </div>
+        <a href="./learnings/list.html">Lists file</a>
 
         <!-- TABLE -->
-        <div class="work" id="tables">
-
-            <!-- Tables -->
-            <h3 class="subhead">&rAarr;Table of All my work&lAarr;</h3>
-            <table style="width: 95%;">
-                <thead style="border: 2px solid black;">
-                    <tr>
-                        <th style="border: 1px solid rgb(173, 44, 44);">Project Name</th>
-                        <th style="border: 1px solid rgb(173, 44, 44);">Details</th>
-                        <th style="border: 1px solid rgb(173, 44, 44);">Duration</th>
-                        <th style="border: 1px solid rgb(173, 44, 44);">Link</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr align="center">
-                        <td>Portfolio Page</td>
-                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, eaque. Vel unde voluptates
-                            cumque a
-                            deserunt minima illo odit necessitatibus hic facere voluptatibus, veritatis numquam veniam
-                            possimus
-                            ab nesciunt. Sunt?</td>
-                        <td>2 mos</td>
-                        <td>#</td>
-                    </tr>
-                    <tr align="center">
-                        <td>Food delivery website</td>
-                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, eaque. Vel unde voluptates
-                            cumque a
-                            deserunt minima illo odit necessitatibus hic facere voluptatibus, veritatis numquam veniam
-                            possimus
-                            ab nesciunt. Sunt?</td>
-                        <td>4 mos</td>
-                        <td>#</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <a href="./learnings/table.html">Tables Concepts</a>
 
         <!-- GRID -->
-        <h2 style="text-align: center;">Grid of vaarious technologies and keys I learnt in web development</h2>
-        <div class="gridcontainer">
-
-            <div class="griditem">This is grid item 1</div>
-            <div class="griditem">This is grid item 2</div>
-            <div class="griditem">This is grid item 3</div>
-            <div class="griditem">This is grid item 4</div>
-            <div class="griditem">This is grid item 5</div>
-            <div class="griditem">This is grid item 6</div>
-            <div class="griditem">This is grid item 7</div>
-            <div class="griditem">This is grid item 8</div>
-            <div class="griditem">This is grid item 9</div>
-            <div class="griditem">This is grid item 10</div>
-            <div class="griditem">This is grid item 11</div>
-        </div>
+        <a href="./learnings/grid.html">Grid Concepts</a>
     </section>
 
     <!-- FORMS -->
-    <div class="write" id="forms">
+    <a href="./learnings/form.html">Form Concepts</a>
 
-        <h3 class="subhead">&rAarr; Write to me &lAarr;</h3>
-        <form class="write" action="backend.php">
-
-            <div class="box">
-                <label contenteditable="true" spellcheck="true" class="name" for="name">Name : </label>
-                <!-- To get the input as text type="text" -->
-                <input value="First Last" type="text" placeholder="Enter Your Name here" autofocus id="name" name="">
-
-            </div>
-            <br>
-            <div class="box" id="email">
-                Email : <input type="email" name="myEmail">
-            </div>
-            <br>
-            <!-- HTML Forms Validation - required, min maxlength, pattern -->
-            <div>
-                <label for="country_code">Country code:</label>
-                <input type="text" id="country_code" name="country_code" pattern="[A-Za-z]{3}" required minlength="2"
-                    maxlength="4" title="Three letter country code">
-
-            </div>
-
-            <!-- The <span> is an in-line element 
-            <div> is a block element. Which means, if we use two separate div tags for different inputs, then all the inputs will come on different lines. 
-            Till we learn we will use the <br> tags for breaking a line -->
-
-            <div>
-                <label for="caste">Caste: </label>
-                <input type="text" disabled name="" id="">
-            </div>
-            <div class="box" id="number">
-                Number : <input type="number" name="">
-            </div>
-
-            <br>
-            <div class="box" id="color">
-                House Color: <input type="color" name="">
-            </div>
-
-            <div class="box">
-                <!-- for="elig" means: if any element with ID elig is clicekd direct input box select hojayegaa -->
-                <label for="elig">Are you Eligible: </label><input type="checkbox" name="myEligibility" id="elig"
-                    checked>
-            </div>
-
-            <div class="box">
-                Feedback: Positive <input type="radio" name="myFeedback"> Negative <input type="radio"
-                    name="myFeedback"> Both <input type="radio" name="myFeedback">
-            </div>
-
-            <div>
-                <label for="nation">
-                    Your nationality:
-                </label>
-                <select name="" id="nation">
-                    <option value="indian" selected>Indian</option>
-                    <option value="not indian">Not Indian</option>
-                    <option value="nri">NRI</option>
-                </select>
-            </div>
-
-            <div>
-                <label for="course">Select Your Course</label>
-                <select name="" id="course">
-                    <optgroup label="Computer Science Courses">
-                        <option value="ce">Computer Eng</option>
-                        <option>Software Eng</option>
-                        <option>Civil Eng</option>
-                    </optgroup>
-                    <optgroup label="Marketing Courses">
-                        <option>YT mark</option>
-                        <option>FB marketing</option>
-                        <option>SEO</option>
-                    </optgroup>
-                    <optgroup label="Finance Course">
-                        <option>rbi</option>
-                        <option>stock</option>
-                        <option>loan</option>
-                    </optgroup>
-                </select>
-            </div>
-
-            <!-- TEXT BOX -->
-            <div>
-                Write Your Feedback: <br> <textarea name="" cols="25" rows="5"></textarea>
-            </div>
-
-            <div>
-                Completed? <input type="submit" value="Submit Now">
-            </div>
-            <br>
-
-            <div>
-                Reset? <input type="reset" value="Reset Now">
-            </div>
-
-        </form>
     </div>
 
 
     <!-- FLEXBOX -->
-    <div class="container">
-        <div class="item" id="item-1">First Box</div>
-        <div class="item" id="item-2">Second Box</div>
-        <div class="item" id="item-3">Third Box</div>
-        <div class="item" id="item-4">Fourth Box</div>
-        <div class="item" id="item-5">Fifth Box</div>
-        <div class="item" id="item-6">Sixth Box</div>
-    </div>
+    <a href="./learnings/flexbox.html">Flexbox Concepts</a>
 
     <!-- Inline Block Elements -->
     <!-- Examples of inline elements: <a> <strong> , <em> , <b> , <i> , <q>, <mark> <span>
@@ -629,6 +456,7 @@
         <li>align content</li>
         <li>flex wrap</li>
         <li>flex flow</li>
+
         <h4>Flex item property</h4>
         <li>order number</li>
         <li>flex: number | auto| none</li>
@@ -653,6 +481,32 @@
         <li>extensions > night owl > theme > italics</li>
     </ul>
     </p>
+
+    <hr>
+    <h1>
+        CSS FRAMEWORKS
+    </h1>
+    <ol>
+        <li><a href="https://semantic-ui.com/">SEMANTIC UI </a></li>
+        <li><a href="https://get.foundation/">Foundation</a></li>
+        <li><a href="http://getskeleton.com/">Skeleton</a></li>
+        <li><a href="https://tailwindcss.com/">Tailwind css</a></li>
+        <li><a href="https://bulma.io/">Bulma</a></li>
+        <li><a href="https://getbootstrap.com/">Bootstrap</a></li>
+    </ol>
+    <h2><a href="../pages/learnings/bootstrap.html"> Bootstrap - complete notes</a></h2>
+    <h2><a href="../pages/learnings/javascript.html"> Javascript - complete notes</a></h2>
+
+
+
+
+
+
+
+
+
+
+
     <div id="footer">
         footer
     </div>
