--- a/pages/learnings/javascript.html
+++ b/pages/learnings/javascript.html
@@ -159,6 +159,7 @@
         <li>Find Method</li>
         <li>Filter Method</li>
     </ol>
+    <p>Checking if this line causes conflicts with the master branch on pullinh.</p>
 </body>
 
 </html>
