--- a/pages/learnings/javascript.html
+++ b/pages/learnings/javascript.html
@@ -324,8 +324,35 @@
     </ol>
 
 
+    <br>
+    <h2>Javascript Versions</h2>
+    <ul>
+        <li>ECMAScript 1 2 3 4 5 6</li>
+        <li>Array Destructuring</li>
+        <li>Object Destructuring</li>
+        <li>Destructuring with default values</li>
+        <li>Destructuring Parameters</li>
+        <li>Rest Parameters - way to pass an arbitrary number of arguments to a function - one function can take only
+            one rest parameter</li>
+        <li>Spread Operator</li>
+    </ul>
 
+    <h2>Array Function</h2>
+    <p> ()=>{} </p>
+    <p>more concise way of writing a traditional function expression, but it cannot be used in all situations.</p>
+    <ol>
+        <h3>Limitations</h3>
+        <li>Do not have this keyword</li>
+        <li>Do not have Arguments</li>
+        <li>Cannot use as a constructor</li>
+    </ol>
 
+    <h3>Spread Operators</h3>
+    <p>The spread operator (...) is a convenient way to copy all or part of an existing array or object into another
+        array or object</p>
+
+    <p>Spread suntac expands an array into its elements, while rest syntac collects multiple elements and condenses them
+        into a single element</p>
 
 
 
