--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div>
       Handcrafted by
       <a href="https://www.linkedin.com/in/faeka/" target="_blank">
-        Fyka Ansari</a>
+        Fyka</a> and Open Source ♥
       | 2022 All rights reserved
     </div>
 
