--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
           </p>
           <h3>My Interests</h3>
           <p>
-            Apart from this, i have got a tons of interests! <br /><br />
+            Apart from coding! <br /><br />
             >reading books 📖<br />
             >photography; 📸<br />
-            >skecthing/painting!; 🎮<br />
-            >I love talking to new people, and making friend!! 🙋‍♂️
+            >sketching/painting!; 🎮<br />
+            >Networking is <3 lets connect🙋‍♂️
           </p>
         </div>
         <div aling="right" class="w50">
