Added search to other pages

--- a/pages/learnings.html
+++ b/pages/learnings.html
@@ -513,7 +513,7 @@
     <footer>
         Copyright &copy; reserved w Fyka Ansar &nbsp;
     </footer>
-
+<script src="../javascript.js"></script>
 </body>
 
 </html>
