--- a/index.html
+++ b/index.html
@@ -180,16 +180,45 @@
     </div>
 
     <footer>
-      <div>
-        Handcrafted by
-        <a href="https://www.linkedin.com/in/faeka/" target="_blank"> Fyka</a>
-        and Open Source ♥ | 2022 All rights reserved
-      </div>
+    <div>
+      Handcrafted by
+      <a href="https://www.linkedin.com/in/faeka/" target="_blank">
+        Fyka Ansari</a>
+      | 2022 All rights reserved
+        <div class="footer-wrapper">
+          <div class="icons">
+            <ul>
+              <li>
+                <a title="linkedin" target="_blank" href="https://www.linkedin.com/in/"
+                  class="ml-3 text-gray-400">
+                  <i class="fab fa-linkedin-in icon"></i>
+                </a>
+              </li>
+              <li>
+                <a title="github" target="_blank" href="https://github.com/" class="ml-3 text-gray-400">
+                  <i class="fab fa-github icon"></i>
+                </a>
+              </li>
+              <li>
+                <a title="twitter" target="_blank" href="https://twitter.com/" class="ml-3 text-gray-400">
+                  <i class="fab fa-twitter icon"></i>
+                </a>
+              </li>
+              <li>
+                <a title="youtube" target="_blank" href="#" class="ml-3 text-gray-400">
+                  <i class="fab fa-instagram icon"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+    
+        </div>
+    </div>
 
-      <span class="floating-footer">
-        Copyright &copy; reserved w Fyka Ansar &nbsp;
-      </span>
-    </footer>
+    <span class="floating-footer">
+      Copyright &copy; reserved w Fyka Ansar &nbsp;
+    </span>
+  </footer>
     <script src="./javascript.js"></script>
   </body>
 </html>
