--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       type="image/x-icon"
       href="./assets/favicon_io/favicon.ico"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
     <link rel="stylesheet" href="./styling.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap"
