--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <script src="javascript.js"></script>
   </head>
 
