--- a/index.html
+++ b/index.html
@@ -221,6 +221,13 @@
       Copyright &copy; reserved w Fyka Ansar &nbsp;
     </span>
   </footer>
+   <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+   <script>
+    function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+    window.addEventListener('load', addDarkmodeWidget);
+  </script>
     <script src="./javascript.js"></script>
   </body>
 </html>
