--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       type="image/x-icon"
       href="./assets/favicon_io/favicon.ico"
     />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    />
     <link rel="stylesheet" href="./styling.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap"
@@ -57,32 +60,35 @@
 
     <section>
       <section class="about" id="about">
-        <div class="subhead">
+        <!-- About me heading is not looking good here -->
+        <!-- <div class="subhead">
           <h2>About me</h2>
-        </div>
+        </div> -->
         <div class="content">
-          <div class="contentbox w50 w75">
-            <h3>I'm a Developer.</h3>
-            <p>
-              🌀Self-taught Web Dev ⚡ Pursuing degree in Computer Science 📸
-              Photographer .
-            </p>
-
-            <p>
-              I love programming and making random web-based applications for
-              fun. I am a future full-stack developer, currently I'm focusing on
-              the backend.
-            </p>
-            <h3>My Interests</h3>
-            <p>
-              Apart from coding! <br /><br />
-              >reading books 📖<br />
-              >photography; 📸<br />
-              >sketching/painting!; 🎮<br />
-              >Networking is <3 lets connect🙋‍♂️
-            </p>
+          <div class="contentbox w50">
+            <h3>Hello there, I am</h3>
+            <h1>Fyka Ansari</h1>
+            <div class="about_self">
+              <h3>I'm a Developer.</h3>
+              <p>
+                🌀Self-taught Web Dev ⚡ Pursuing degree in Computer Science 📸
+                Photographer.<br />
+                I love programming and making random web-based applications for
+                fun. I am a future full-stack developer, currently I'm focusing
+                on the backend.
+              </p>
+            </div>
+            <div class="about_hobby">
+              <h3>My Interests apart from coding</h3>
+              <p>
+                📖 reading books<br />
+                📸 photography<br />
+                🎨 sketching/painting!<br />
+              </p>
+            </div>
+            <button class="about_btn">Let's connect</button>
           </div>
-          <div aling="right" class="w50">
+          <div aling="right" class="w50 about_img">
             <img src="./assets/girl.jpg" class="img-responsive imgIM" />
           </div>
         </div>
@@ -181,45 +187,62 @@
     </div>
 
     <footer>
-    <div>
-      Handcrafted by
-      <a href="https://www.linkedin.com/in/faeka/" target="_blank">
-        Fyka </a> and Open Source ♥
-      | 2022 All rights reserved
+      <div>
+        Handcrafted by
+        <a href="https://www.linkedin.com/in/faeka/" target="_blank"> Fyka </a>
+        and Open Source ♥ | 2022 All rights reserved
         <div class="footer-wrapper">
           <div class="icons">
             <ul>
               <li>
-                <a title="linkedin" target="_blank" href="https://www.linkedin.com/in/"
-                  class="ml-3 text-gray-400">
+                <a
+                  title="linkedin"
+                  target="_blank"
+                  href="https://www.linkedin.com/in/"
+                  class="ml-3 text-gray-400"
+                >
                   <i class="fab fa-linkedin-in icon"></i>
                 </a>
               </li>
               <li>
-                <a title="github" target="_blank" href="https://github.com/" class="ml-3 text-gray-400">
+                <a
+                  title="github"
+                  target="_blank"
+                  href="https://github.com/"
+                  class="ml-3 text-gray-400"
+                >
                   <i class="fab fa-github icon"></i>
                 </a>
               </li>
               <li>
-                <a title="twitter" target="_blank" href="https://twitter.com/" class="ml-3 text-gray-400">
+                <a
+                  title="twitter"
+                  target="_blank"
+                  href="https://twitter.com/"
+                  class="ml-3 text-gray-400"
+                >
                   <i class="fab fa-twitter icon"></i>
                 </a>
               </li>
               <li>
-                <a title="youtube" target="_blank" href="#" class="ml-3 text-gray-400">
+                <a
+                  title="youtube"
+                  target="_blank"
+                  href="#"
+                  class="ml-3 text-gray-400"
+                >
                   <i class="fab fa-instagram icon"></i>
                 </a>
               </li>
             </ul>
           </div>
-    
         </div>
-    </div>
+      </div>
 
-    <span class="floating-footer">
-      Copyright &copy; reserved w Fyka Ansar &nbsp;
-    </span>
-  </footer>
+      <span class="floating-footer">
+        Copyright &copy; reserved w Fyka Ansar &nbsp;
+      </span>
+    </footer>
     <script src="./javascript.js"></script>
   </body>
 </html>
